/**
   * Copyright (c) 2022 Peking University and Peking University Institute for Computing and Digital Economy
   * SCOW is licensed under Mulan PSL v2.
   * You can use this software according to the terms and conditions of the Mulan PSL v2.
   * You may obtain a copy of Mulan PSL v2 at:
   *          http://license.coscl.org.cn/MulanPSL2
   * THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
   * EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
   * MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
   * See the Mulan PSL v2 for more details.
*/

syntax = "proto3";

package scheduler.adapter;

message AddUserToAccountRequest {
  string user_id = 1;
  string account_name = 2;
}

// "OK" | "ALREADY_EXISTS"
message AddUserToAccountResponse {
}

message RemoveUserRequest {
  string user_id = 1;
  string account_name = 2;
}

// "OK" | "NOT_FOUND"
message RemoveUserResponse {
}

message BlockUserInAccountRequest {
  string user_id = 1;
  string account_name = 2;
}

// "OK" | "NOT_FOUND"
message BlockUserInAccountResponse {
}

message UnblockUserInAccountRequest {
  string user_id = 1;
  string account_name = 2;
}

// "OK" | "NOT_FOUND"
message UnblockUserInAccountResponse {
}


service UserService {
  rpc AddUserToAccount(AddUserToAccountRequest) returns (AddUserToAccountResponse);

  rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse);

  rpc BlockUserInAccount(BlockUserInAccountRequest) returns (BlockUserInAccountResponse);

  rpc UnblockUserInAccount(UnblockUserInAccountRequest) returns (UnblockUserInAccountResponse);

}
